# dreamcatcher

./: CMakeLists.txt
assets/pictures/: badend.txt  bear.txt  bus.txt  candies.txt  cat.txt  dog.txt  mainmenu.txt  owl.txt  sleep.txt  spider.txt  welcome.txt
assets/settings/: characters.json  charactersStats.json  plot.json
src/: Game.cpp  Game.h  main.cpp
src/Character/: Character.h  CharactersManager.cpp  CharactersManager.h  FightManager.cpp  FightManager.h
src/Character/Characters/: EnemyCharacter.cpp  EnemyCharacter.h  MainCharacter.cpp  MainCharacter.h
src/Character/Factory/: CharacterCreator.cpp  CharacterCreator.h  Creator.h  EnemyCreator.cpp  EnemyCreator.h
src/Characters/: Character.h  EnemyCharacter.h  MainCharacter.cpp  MainCharacter.h
src/Command/: Command.h
src/Command/Commands/: DownKeyCommand.cpp  DownKeyCommand.h  EnterKeyCommand.cpp  EnterKeyCommand.h  UpKeyCommand.cpp  UpKeyCommand.h
src/Console/: Console.cpp  Console.h
src/DataIO/: DataIO.cpp  DataIO.h
src/Forms/Button/: Button.cpp  Button.h
src/Forms/Options/: Options.cpp  Options.h
src/Forms/Picture/: Picture.cpp  Picture.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Scenes/: Scene.h  ScenesManager.cpp  ScenesManager.h
src/Scenes/Builders/: Builder.h  FightBuiler.cpp  FightBuiler.h  MenuBuilder.cpp  MenuBuilder.h  StoryBuilder.cpp  StoryBuilder.h
src/Scenes/Director/: Director.cpp  Director.h
src/Scenes/Scenes/: FightScene.cpp  FightScene.h  MenuScene.h  StoryScene.cpp  StoryScene.h
src/States/: FightState.cpp  FightState.h  GameState.h  MenuState.cpp  MenuState.h  SettingsState.h  State.h  StateContext.h  StoryState.cpp  StoryState.h
tests/: test1.cpp
